--- a/src/pages/auth/Auth.module.scss
+++ b/src/pages/auth/Auth.module.scss
@@ -34,6 +34,11 @@
           display: flex;
           justify-content: space-between;
           margin: 5px 0;
+          a{
+            
+            text-decoration: none;
+            color: #000;
+          }
         }
   
         p {
@@ -46,6 +51,11 @@
         justify-content: center;
         align-items: center;
         margin-top: 1rem;
+        a{
+          text-decoration: none;
+          color: #000;
+          margin: 0 0 0 .5rem;
+        }
       }
     }
   
